src/test/compile-fail/import3.rs
// error-pattern: unresolved
use main::bar;

fn main(args: ~[str]) { debug!("foo"); }
